# termquiz

./: CLAUDE.md  Cargo.toml  termquiz-spec.md
fixtures/: mc_quiz.md  sample_quiz.md
src/: cli.rs  editor.rs  git.rs  lib.rs  main.rs  model.rs  parser.rs  persist.rs  source.rs  state.rs  submit.rs  timer.rs  tui.rs
src/ui/: ack.rs  dialog.rs  keybar.rs  layout.rs  markdown.rs  mod.rs  question.rs  result.rs  sidebar.rs  statusbar.rs  titlebar.rs  waiting.rs
tests/: parse_quiz.rs  submit_format.rs
