[package]
name = "termquiz"
version = "0.1.0"
edition = "2021"
description = "Terminal-based timed quiz application"
license = "MIT"

[package.metadata.deb]
depends = "sleuthkit, libsdl2-2.0-0"
section = "education"
priority = "optional"

[dependencies]
ratatui = "0.29"
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
clap = { version = "4", features = ["derive"] }
